--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "migrate": "postgrator --config postgrator-config.js",
+    "migrate": "npx postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
     "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "predeploy": "npm audit && npm run migrate:production",
