--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "API, server, and database for Noms PDX",
   "main": "src/server.js",
+  "type": "commonjs",
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
@@ -20,43 +21,40 @@
   },
   "keywords": [],
   "engines": {
-    "node": "13.10.1"
+    "node": "20.11.1"
   },
-  "author": "",
+  "author": "k3vnb",
   "license": "ISC",
   "dependencies": {
-    "@googlemaps/google-maps-services-js": "^2.5.5",
-    "bcrypt": "^3.0.8",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "helmet": "^3.22.0",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.19.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.0",
-    "passport": "^0.4.1",
+    "node-fetch": "^2.7.0",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^7.18.2",
+    "pg": "^8.12.0",
     "treeize": "^2.1.2",
-    "uuidv4": "^6.0.7",
-    "xss": "^1.0.6"
+    "uuidv4": "^6.2.13",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
+    "chai": "^4.4.1",
+    "eslint": "9.5.0",
     "husky": "^3.1.0",
     "mocha": "^6.2.3",
     "nodemon": "^1.19.4",
     "postgrator-cli": "^3.3.0",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1",
+    "pretty-quick": "^2.0.2",
     "supertest": "^4.0.2"
   }
 }
