--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.12.0",
     "treeize": "^2.1.2",
-    "uuidv4": "^6.2.13",
+    "uuid": "^10.0.0",
     "xss": "^1.0.15"
   },
   "devDependencies": {
