--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "knex": "^3.1.0",
+    "memorystore": "^1.6.7",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
